[package]
name = "migi"
version = "0.1.2"
edition = "2021"
description = "A minimal static site generator."
readme = "README.md"
license = "MIT"
keywords = ["website", "static", "site", "ssg", "generator"]
categories = ["command-line-utilities"]
repository = "https://github.com/abql/migi"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.101"
pulldown-cmark = "0.9.3"
syntect = "5.1.0"
regex = "1.9.5"
once_cell = "1.18.0"
minify-html-onepass = "0.11.1"
toml = "0.8.2"
walkdir = "2.4.0"
termcolor = "1.3.0"
anyhow = "1.0.77"
